# nrf52-pwm-wav-sbc-decoder-player

./: .gitignore  CMakeLists.txt  README.md  prj.conf  sample.yaml
boards/arm/audio_player/: Kconfig.board  Kconfig.defconfig  audio_player.dts  audio_player.yaml  audio_player_defconfig  board.cmake
boards/arm/nrf52840dongle_nrf52840/: nrf52840dongle_nrf52840.dts
files/: decode.sh
lib/libogg-1.3.5/include/ogg/: os_types.h
lib/opus-1.2.1/: arch.h  typedef.h
lib/opus-1.2.1/arm/: LPC_inv_pred_gain_arm.h  NSQ_del_dec_arm.h  biquad_alt_arm.h  warped_autocorrelation_FIX_arm.h
lib/opusfile-0.12/src/: -i
src/: audio_opus_decoder.h  audio_opus_file_decoder.h  main.c  main.cpp  nrf_error.h  nrf_pwm_audio.c  nrf_pwm_audio.h  nrftalk_opus.h  nrftalk_raw.h  sdk_errors.h  simple-pwm.h
src/audio/: AudioDecoder.h  AudioDecoderRaw.h  AudioDecoderSbc.h  PWMPlayer.cpp  PWMPlayer.h  SbcPWMPlayer.cpp  SbcPWMPlayer.h  buzzer01_16kHz.h  buzzer02_16kHz.h  buzzer03_16kHz.h  buzzer04_16kHz.h  buzzer04_16kHz_8bit.h  decoder.h
src/config/: app_error.h  config.h
src/ogg/: config_types.h  k_realloc.c  k_realloc.h
src/samples/: hit.h  itsworking.h  liftup.h  sample_hit_raw.h  sample_itsworking_sbc.h
